initial set up data base and render: accept correct, refuse incorrect feeds

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <body>
         <h1>Hello world!</h1>
         <h2>Tip: Check your console</h2>
-        hehehwehfsadfaaaaaaaazzzbb
     </body>
     
 </html> -->
 
-<html lang="ru" eagle-extension-theme="light" eagle-extension-locale="en" eagle-extension-os="Windows">
+<!DOCTYPE html>
+<html lang="ru">
 <style id="Force_Custom_Fonts" type="text/css">
     @font-face {
         font-style: normal;
@@ -48,7 +48,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <title>Hexlet Frontend Project</title>
+    <title>RSS-Agregator</title>
     <script defer="defer" src="main.js"></script>
     <link href="main.css" rel="stylesheet">
     <style>
@@ -1441,13 +1441,12 @@
             </div>
         </section>
     </main>
-    <footer class="footer border-top py-3 mt-5 bg-light">
+    <!-- <footer class="footer border-top py-3 mt-5 bg-light">
         <div class="container-xl">
             <div class="text-center">created by <a href="https://ru.hexlet.io/professions/frontend/projects/11"
                     target="_blank">Hexlet</a></div>
         </div>
-    </footer>
-    <div id="eagle-drag-images" style="position: fixed; top: -100000px;"></div>
+    </footer> -->
 </body>
 
 </html>
