--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
 <style lang="en" type="text/css" id="dark-mode-native-sheet"></style>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta charset="utf-8 /">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>RSS-Agregator</title>
-    <script defer="defer" src="main.js"></script>
-    <link href="main.css" rel="stylesheet">
     <style>
         .swal2-popup.swal2-toast {
             box-sizing: border-box;
