add feature: change language

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
             <!-- Change language -->
             <div class="dropdown position-absolute top-0 start-0" id="language">
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown button
+                <button id="change-language" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    RU
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item dropdown-language" data-value="ru" href="#">Русский</a></li>
@@ -65,8 +65,8 @@
                             </div>
                         </div>
                     </form>
-                    <p class="mt-2 mb-0 text-muted" data-bs-theme="dark">
-                        Пример: https://lorem-rss.hexlet.app/feed
+                    <p id="example" class="mt-2 mb-0 text-muted" data-bs-theme="dark">
+                        Пример: https://lorem-rss.hexlet.app/feed?unit=second
                     </p>
                     <p class="feedback m-0 position-absolute small text-danger"></p>
                 </div>
