color change lang button to dark

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <!-- Change language -->
             <div class="dropdown position-absolute top-0 start-0" id="language">
-                <button id="change-language" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <button id="change-language" class="btn btn-dark dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     RU
                 </button>
                 <ul class="dropdown-menu">
