add spinner to Add button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                                 </div>
                             </div>
                             <div class="col-auto">
-                                <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">
+                                <button id="button-add" type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">
+                                    <span id="spinner" class="visually-hidden spinner-border spinner-border-sm" style="margin-right: 0.35em; width: 1.05em; height: 1.05em" role="status" aria-hidden="true"></span>
                                     Добавить
                                 </button>
                             </div>
